--- a/styles/styles.css
+++ b/styles/styles.css
@@ -365,7 +365,7 @@ footer .container {
   }
 
   .nav-link {
-    padding: 10px 0;
+    padding: 10px 20px;
   }
 
   .hi {
@@ -428,11 +428,16 @@ footer .container {
 /* mobile portrait - 480px */
 
 @media (max-width: 512px) {
-  .hero-camera {
-    height: 30vh;
-  }
   .container {
     padding: 0 15px;
+  }
+
+  .nav-link {
+    padding: 10px 5px;
+  }
+
+  .hero-camera {
+    height: 30vh;
   }
 
   .logo {
@@ -546,7 +551,7 @@ footer .container {
 }
 
 .btn {
-  padding: 10px;
+  padding: 10px 15px;
   background: linear-gradient(125.18deg, #0c1eb9 -13.24%, #7d20a6 109.11%);
   border-radius: 5px;
 }
@@ -571,7 +576,7 @@ footer .container {
 .other-projects {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 15px;
+  gap: 30px;
 }
 
 .other-project-link-block {
@@ -630,6 +635,11 @@ p.second {
     grid-template-columns: 1fr 1.5fr;
   }
 
+  .multi-image-grid,
+  .other-projects {
+    gap: 10px;
+  }
+
   .other-projects img {
     height: 200px;
   }
@@ -658,10 +668,6 @@ p.second {
     padding-bottom: 5px;
   }
 
-  .multi-image-grid {
-    gap: 15px;
-  }
-
   .project-grid-image {
     height: 200px;
   }
@@ -680,6 +686,7 @@ p.second {
   .project-heading {
     font-size: 24px;
   }
+
   .multi-image-grid {
     grid-template-columns: 1fr;
   }
